# msgraph-mcp

./: LICENSE  README.md  implementation_analysis.md  pyproject.toml
src/msgraph_mcp/: __init__.py  __main__.py  auth.py  config.py  graph_client.py  prompts.py  resources.py  server.py  tools.py
